website bimbel DVR

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <!-- Navbar Start -->
     <nav class="navbar">
-      <a href="#" class="navbar-logo">bimbel<span>DVR</span>.</a>
+      <a href="#" class="navbar-logo">Bimbel<span>DVR</span></a>
 
       <div class="navbar-nav">
         <a href="#home">Home</a>
@@ -42,12 +42,12 @@
     <!-- Hero Section start -->
     <section class="hero" id="home">
       <main class="content">
-        <h1>Membangun Generasi <span>Cerdas</span></h1>
+        <h1>Tempat Bimbingan Belajar <span>Terbaik</span></h1>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente,
-          quisquam.
+          Selamat datang di Bimbel DVR, teman belajar terbaik yang bikin kamu
+          cepat paham.
         </p>
-        <a href="#" class="cta">Beli Sekarang</a>
+        <a href="#menu" class="cta">Daftar Sekarang</a>
       </main>
     </section>
     <!-- Hero Section end-->
@@ -63,13 +63,18 @@
         <div class="content">
           <h3>Kenapa memilih bimbel kami?</h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit
-            sunt nemo rerum facilis in. Sequi?
+            <em>Bimbel</em><span>DVR</span> adalah bimbingan belajar tatap muka
+            yang telah berhasil mengantarkan lebih dari ratusan siswa dalam
+            meningkatkan kemampuan akademik mereka. Kami akan mengajari kalian
+            berbagai pembelajaran akademik secara efektif mulai dari 0 hingga
+            berbagai pendalaman materi. Selain itu, kami juga akan memberikan
+            <em>secret formula</em> dalam memecahkan soal-soal berbasis
+            <em>trik cepat</em>.
           </p>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad,
-            quaerat. Maxime, consectetur error sequi quod nulla rem laudantium
-            ut aut!
+            <em>Bimbel</em><span>DVR</span> sudah berdiri sejak 05 Juli 2020,
+            dan selalu memiliki visi untuk menjadi bimbingan belajar
+            <em>terbaik</em> dan <em>terbesar</em> se-Indonesia.
           </p>
         </div>
       </div>
@@ -80,46 +85,45 @@
     <section id="menu" class="menu">
       <h2><span>Paket</span> Belajar</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-        placeat voluptatum asperiores officiis accusamus.
+        Pemesanan paket belajar dapat dilakukan melalui Whatsapp yang telah kami cantumkan.
       </p>
 
       <div class="row">
         <div class="menu-card">
           <img
-            src="img/menu/1.jpg"
+            src="img/menu/3.jpg"
             alt="Paket Akuntansi"
             class="menu-card-img"
           />
-          <h3 class="menu-card-title">- Paket Akuntansi -</h3>
-          <p class="menu-card-price">IDR 150k</p>
+          <h3 class="menu-card-title">- Paket Bimbel Bulanan -</h3>
+          <p class="menu-card-price">IDR 200k/Month</p>
         </div>
         <div class="menu-card">
           <img
             src="img/menu/1.jpg"
-            alt="Paket Akuntansi"
+            alt="Paket Bimbel Bulanan"
             class="menu-card-img"
           />
           <h3 class="menu-card-title">- Paket Akuntansi -</h3>
-          <p class="menu-card-price">IDR 150k</p>
+          <p class="menu-card-price">IDR 50k/Week</p>
         </div>
         <div class="menu-card">
           <img
-            src="img/menu/1.jpg"
+            src="img/menu/2.jpg"
             alt="Paket Akuntansi"
             class="menu-card-img"
           />
-          <h3 class="menu-card-title">- Paket Akuntansi -</h3>
-          <p class="menu-card-price">IDR 150k</p>
+          <h3 class="menu-card-title">- Paket Matematika -</h3>
+          <p class="menu-card-price">IDR 50k/Week</p>
         </div>
         <div class="menu-card">
           <img
-            src="img/menu/1.jpg"
+            src="img/menu/4.jpg"
             alt="Paket Akuntansi"
             class="menu-card-img"
           />
-          <h3 class="menu-card-title">- Paket Akuntansi -</h3>
-          <p class="menu-card-price">IDR 150k</p>
+          <h3 class="menu-card-title">- Paket Mandarin -</h3>
+          <p class="menu-card-price">IDR 65k/Week</p>
         </div>
       </div>
     </section>
@@ -129,8 +133,7 @@
     <section id="contact" class="contact">
       <h2><span>Kontak</span> Kami</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-        recusandae.
+        Ada pertanyaan? Silahkan hubungi kami di bawah.
       </p>
 
       <div class="row">
@@ -138,25 +141,25 @@
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.813922205827!2d109.37560957447681!3d-0.08507373549182355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e1d50a0b3bf7315%3A0xce56a8413a2b9aef!2sGg.%20Pd.%20Damai%20No.6%2C%20Sungai%20Raya%2C%20Kec.%20Sungai%20Raya%2C%20Kabupaten%20Kubu%20Raya%2C%20Kalimantan%20Barat%2078123!5e0!3m2!1sid!2sid!4v1717321278177!5m2!1sid!2sid"
           allowfullscreen=""
           loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade" class="map"
+          referrerpolicy="no-referrer-when-downgrade"
+          class="map"
         ></iframe>
 
         <form action="">
           <div class="input-group">
             <i data-feather="user"></i>
-            <input type="text" placeholder="Nama">
+            <input type="text" placeholder="Nama" />
           </div>
           <div class="input-group">
             <i data-feather="mail"></i>
-            <input type="text" placeholder="Email">
+            <input type="text" placeholder="Email" />
           </div>
           <div class="input-group">
             <i data-feather="phone"></i>
-            <input type="text" placeholder="Nomor Handphone">
+            <input type="text" placeholder="Nomor Handphone" />
           </div>
           <button type="submit" class="btn">Kirim Pesan</button>
         </form>
-
       </div>
     </section>
     <!-- Contact Section end -->
